Updated screenshot and theme info

--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 Theme Name:         TEDxYYC
 Theme URI:          http://tedxyyc.com
 Description:        Developed by FLIPP Advertising Inc.
-Version:            0.5
+Version:            0.6
 Author:             James Bull
 Author URI:         http://jamesbull.ca/
 
 License:            The Unlicense
 License URI:        http://unlicense.org/
+
+Github:				https://github.com/jamesbull/TEDxYYC-Wordpress-Theme
+
 */
