--- a/css/style.css
+++ b/css/style.css
@@ -207,8 +207,12 @@ h3{
 	padding: 0 0 12px 0;
 }
 
+ul, ol {
+	margin: 0;
+	padding: 0 0 24px 40px;
+}
+
 ul{
-	padding: 0;
 	list-style-type: none;
 }
 
